pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidImportBackslashSep.pkl
// In all OSes, the directory separator is forward slash. 
res = import(#"..\basic\baseModule.pkl"#)
